update docker config

--- a/pseudo_api/Dockerfile
+++ b/pseudo_api/Dockerfile
@@ -1,10 +1,13 @@
-FROM continuumio/miniconda3
+FROM python:3
 
-WORKDIR usr/src/pseudo_api
+WORKDIR usr/src/pdf_api
 
-ADD environment.yml environment.yml
+COPY requirement.txt ./
+RUN pip install --no-cache-dir -r requirements.txt
 
-RUN conda env create -f environment.yml
-ENV PATH /opt/conda/envs/flair_pseudo_api/bin:$PATH
-RUN /bin/bash -c "source activate flair_pseudo_api"
+#ADD environment.yml environment.yml
+
+#RUN conda env create -f environment.yml
+#ENV PATH /opt/conda/envs/flair_pseudo_api/bin:$PATH
+#RUN /bin/bash -c "source activate flair_pseudo_api"
 COPY . .
