--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,13 +2,11 @@ version: '3'
 
 services:
   pseudo_api:
-    container_name: pseudo_api
+    container_name: pdf_api
     restart: always
-    build: ./pseudo_api
+    build: ./pdf_api
     ports:
       - "8000:8000"
-    volumes:
-      - ${PSEUDO_MODEL_PATH}:/usr/src/pseudo_api/model/best-model.pt
     command: gunicorn -w 2 --timeout 90 -b 0.0.0.0:8000 wsgi:server
 
   nginx:
