add requirements for ocrmypdf

--- a/pdf_api/Dockerfile
+++ b/pdf_api/Dockerfile
@@ -3,6 +3,22 @@ FROM python:3
 WORKDIR usr/src/pdf_api
 
 COPY requirements.txt ./
+RUN apt-get -y remove ocrmypdf
+RUN apt-get -y update
+RUN apt-get -y install \
+    ghostscript \
+    icc-profiles-free \
+    liblept5 \
+    libxml2 \
+    pngquant \
+    python3-cffi \
+    python3-distutils \
+    python3-pkg-resources \
+    python3-reportlab \
+    qpdf \
+    tesseract-ocr \
+    zlib1g
+
 RUN pip install --no-cache-dir -r requirements.txt
 
 #ADD environment.yml environment.yml
