--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     build: ./pdf_api
     ports:
       - "8000:8000"
-    command: gunicorn -w 2 --timeout 90 -b 0.0.0.0:8000 wsgi:server
+    command: gunicorn -w 2 --timeout 90 -b 0.0.0.0:8000 wsgi:app
 
   nginx:
     container_name: nginx
