--- a/nginx/project.conf
+++ b/nginx/project.conf
@@ -4,7 +4,7 @@ server {
     server_name localhost;
 
     location / {
-        proxy_pass http://pseudo_api:8000;
+        proxy_pass http://pdf_api:8000;
         # Do not change this
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
