--- a/pdf_api/requirements.txt
+++ b/pdf_api/requirements.txt
@@ -16,16 +16,16 @@ idna==2.10
 img2pdf==0.3.6
 importlib-metadata==1.7.0
 itsdangerous==1.1.0
-Jinja2==2.11.2
+jinja2>=2.11.3
 joblib==0.16.0
 JPype1==0.7.5
-lxml==4.5.1
+lxml>=4.6.5
 MarkupSafe==1.1.1
 ocrmypdf==10.2.0
 pdf2image==1.13.1
 pdfminer.six==20200517
-pikepdf==1.17.0
-Pillow==7.2.0
+pikepdf>=2.10.0
+Pillow>=9.0.0
 pluggy==0.13.1
 pycparser==2.20
 pycryptodome==3.9.8
@@ -38,6 +38,6 @@ six==1.15.0
 sortedcontainers==2.2.2
 sqlitedict==1.6.0
 tqdm==4.47.0
-urllib3==1.25.9
+urllib3>=1.26.5
 Werkzeug==1.0.1
 zipp==3.1.0
